add types lesson

--- a/2.b.Hosting.md
+++ b/2.b.Hosting.md
@@ -15,20 +15,47 @@
 ## Install Git
 
 Run the following line in Terminal by copying it from here and pasting it into the Terminal
-window you just opened. Make sure you're focused on the Terminal window (there should be a blinking
-cursor), and hit command + V like you normally would. Then hit Return to run the command.
+window you just opened and hit Return to run the command.
 
 ```
 /usr/bin/git
 ```
 
+You'll probably be prompted to install Git. Follow through with the installation before
+continuing on.
+
 ## Install Node
 
 [nodejs.org](https://nodejs.org)
 
-## Run `git init` in your project folder
+## Set up your project folder
 
-1. In your Terminal window, type or paste `cd ~/Code/landing-page` and hit Return.
-2. Type or paste `git init` and hit Return.
-3. Type or paste `npm init` and hit Return.
-4. Type or paste `npm install firebase-tools` and hit Return.
+In your Terminal window, type or paste each of the following and hit Return after each, in order.
+
+First, change the "working directory" of your Terminal
+window to your project folder, by using the `cd` command. (`cd` stands for "change directory".)
+```
+cd ~/Code/landing-page
+```
+
+Next, initialize `git`, which is a _source control_ software. That means that it lets you create "versions" of your code — called "commits" — that are saved forever, allowing you to travel back in time for any file in your project (your codebase). Git also allows us to push all this data to the cloud, so the entire history of your source code is backed up and shareable with others. Initialize `git` by running the following command in your Terminal window.
+```
+git init
+```
+
+When you installed Node.js, you also installed `npm`, which stands for "Node.js package manager". These days it does more than just manage packages (third-party code that's available for download off of NPM's server), but it's separate from the Node.js JavaScript runtime, which you can invoke with the command `node` rather than `npm`. `npm init` guides you through writing your `package.json` file, which contains configurations for your Node.js project. Initialize `npm` by running the following command in your Terminal window.
+```
+npm init
+```
+
+Next, we're going to use `npm` to install `firebase-tools`, a package of Node.js-compatible JavaScript code published by the people at Google (which runs Firebase) that we're going to use to deploy our project to our Firebase host. Command line tools like this are the glue between the source code that lives on your machine and the server that hosts that code.
+```
+npm install -g firebase-tools
+```
+
+> *What's most important to know here?*
+>
+> Hosting really just involves uploading the code you wrote to an Internet-connected computer (a server). Apart from the domain, which Firebase sets up for you automatically and for free, the only part of hosting you need to worry about as a developer using a tool like Firebase is uploading your code, and `firebase-tools` is the official way to do that.
+
+
+
