--- a/Lesson_1_Functions_and_objects/1.Functions_and_objects.md
+++ b/Lesson_1_Functions_and_objects/1.Functions_and_objects.md
@@ -18,7 +18,7 @@ Think of a function like an "action template". When you're writing a function,
 you're writing down instructions for what to do given some input which, as you
 sit down to write the function, you don't yet have access to. That means that,
 unless we add constraints on what types of inputs we accept (which we'll learn
-how to do in [Lesson 2](./2.Types.md)), we need to make sure that our function,
+how to do in [Lesson 2](../Bonus_Lesson_1_Types/Types.md)), we need to make sure that our function,
 which we're writing now (at what's commonly called "compile time" or "design
 time") can handle whatever gets thrown at it at "run time".
 
